Adicionado nova rota /investment
